--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
                     <div class="about__buttons">
                         <a download=""
-                            href="https://drive.google.com/file/d/1isN6wk3A8kUQQ-3bC_iwR9inCbqNCWi0/view?usp=sharing"
+                            href="https://drive.google.com/file/d/1E64J7kzmVfzwOG8haIMSj-56vfioUtob/view?usp=drive_link?usp=sharing"
                             target="_blank" class="button button--flex">
                             View resume<i class="uil uil-download-alt button__icon"></i>
                         </a>
